change directory structure

--- a/skills-and-achievements.html
+++ b/skills-and-achievements.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
-    <link rel="stylesheet" type="text/css" href="../css/mystyle.css">
+    <link rel="stylesheet" type="text/css" href="css/mystyle.css">
 
     <link href="https://fonts.googleapis.com/css?family=Special+Elite" rel="stylesheet">
 
@@ -37,7 +37,7 @@
                         <li class="active"><a href="skills-and-achievements.html">Skills and Achievements <span class="sr-only">(current)</span></a></li>
                         <li><a href="contact-me.html">Contact Me</a></li>
                     </ul>
-                    <p class="navbar-right footer">Made with <img src="../Images/heart.png" alt="love"> by Raunak Singwi</p>
+                    <p class="navbar-right footer">Made with <img src="Images/heart.png" alt="love"> by Raunak Singwi</p>
 
                 </div>
             </div>
@@ -180,7 +180,7 @@
 
     </div>
 
-    <script src="../js/jquery.js"></script>
+    <script src="js/jquery.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </body>
 </html>
