--- a/journey-so-far.html
+++ b/journey-so-far.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Contact Info</title>
+    <title>Journey So Far</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
-    <link rel="stylesheet" type="text/css" href="../css/mystyle.css">
+    <link rel="stylesheet" type="text/css" href="css/mystyle.css">
 
     <link href="https://fonts.googleapis.com/css?family=Special+Elite" rel="stylesheet">
 
@@ -33,15 +33,25 @@
                 <div class="collapse navbar-collapse" id="my-menu">
                     <ul class="nav navbar-nav">
                         <li><a href="index.html">About Me</a></li>
-                        <li><a href="journey-so-far.html">Journey So Far</a></li>
+                        <li class="active"><a href="journey-so-far.html">Journey So Far <span class="sr-only">(current)</span></a></li>
                         <li><a href="skills-and-achievements.html">Skills and Achievements</a></li>
-                        <li class="active"><a href="contact-me.html">Contact Me <span class="sr-only">(current)</span></a></li>
+                        <li><a href="contact-me.html">Contact Me</a></li>
                     </ul>
-                    <p class="navbar-right footer">Made with <img src="../Images/heart.png" alt="love"> by Raunak Singwi</p>
+                    <p class="navbar-right footer">Made with <img src="Images/heart.png" alt="love"> by Raunak Singwi</p>
 
                 </div>
             </div>
         </nav>
+
+        <div class="row container-fluid">
+            <div class="col-xs-12 col-md-3">
+                <h1>Ramdeobaba College of Engineering and Management,Nagpur</h1>
+                <h4 class="second-heading">Current: 3rd year Engineering</h4>
+            </div>
+            <div class="col-xs-12 col-md-9">
+                <p>College, generally said to be the most exciting phase of life. Well it is good tough.</p>
+            </div>
+        </div>
 
         <br>
         <br>
@@ -50,68 +60,41 @@
         <br>
 
         <div class="row container-fluid">
-            <div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-                <dl class="dl-horizontal">
-                    <dt>Address</dt>
-                    <dd>Boys Hostel, Ramdeobaba College of Engineering and Management, Nagpur-13</dd>
-
-                    <br>
-                    <br>
-
-                    <dt>Email</dt>
-                    <dd>raunaksingwi7@gmail.com</dd>
-
-                    <br>
-                    <br>
-
-                    <dt>Contact No.</dt>
-                    <dd>9421493219</dd>
-
-                    <br>
-                    <br>
-
-                    <dt>Facebook</dt>
-                    <dd>www.facebook.com/raunaksingwi7</dd>
-
-                    <br>
-                    <br>
-
-                    <dt>Twitter</dt>
-                    <dd>@raunak_singwi</dd>
-
-                    <br>
-                    <br>
-
-                    <dt>LinkedIn</dt>
-                    <dd>in.linkedin.com/in/raunak-singwi-407087bb
-                    </dd>
-
-                    <br>
-                    <br>
-
-                    <dt>GitHub</dt>
-                    <dd>github.com/raunaksingwi</dd>
-
-                    <br>
-                    <br>
-
-                    <dt>CodeChef</dt>
-                    <dd>www.codechef.com/users/raunaksingwi</dd>
-
-                    <br>
-                    <br>
-
-                    <dt>HackerRank</dt>
-                    <dd>www.hackerrank.com/raunaksingwi</dd>
-
-                </dl>
+            <div class="col-xs-12 col-md-3">
+                <h1>Padhye Sir's Akash Education, Akola</h1>
+                <h4 class="second-heading">The <big>Bad</big> Times...</h4>
+            </div>
+            <div class="col-xs-12 col-md-9">
+                <p>College, generally said to be the most exciting phase of life. Well it is good tough.</p>
             </div>
         </div>
+
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+
+        <div class="row container-fluid">
+            <div class="col-xs-12 col-md-3">
+                <h1>Dinbai Vidyalay,Digras</h1>
+                <h4 class="second-heading">Wonderland...The Awesome Times...</h4>
+            </div>
+            <div class="col-xs-12 col-md-9">
+                <p>College, generally said to be the most exciting phase of life. Well it is good tough.</p>
+            </div>
+        </div>
+
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
 
     </div>
 
 
-    <script src="../js/jquery.js"></script>
+    <script src="js/jquery.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </body>
 </html>
