--- a/contact-me.html
+++ b/contact-me.html
@@ -11,7 +11,7 @@
 
     <link href="https://fonts.googleapis.com/css?family=Special+Elite" rel="stylesheet">
 
-    <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Dekko" rel="stylesheet">
 
 </head>
 <body>
