Fill journey so far

--- a/journey-so-far.html
+++ b/journey-so-far.html
@@ -49,7 +49,7 @@
                 <h4 class="second-heading">Current: 3rd year Engineering</h4>
             </div>
             <div class="col-xs-12 col-md-9">
-                <p>College, generally said to be the most exciting phase of life. Well it is good tough.</p>
+                <p>Well, college is not what I assumed it to be. And definately not what others told me about it ! All thoes, physics chemistry and mathematics classes in 1st year... I hated them ! I thought 2nd year will be where we dive into technology and start making software. How immature I was... I did't wanted to learn most of the subjects ! I always wanted to be a software developer, a coder,a designer.... But yes, here I met genious people who guided me to become what I want to be. And yes, college have taught me a lot. It taught me, how to learn on your own. How to study the whole night to pass the exams next morning. How to do work with patience and dedication you dont like to do(writing journels and assignments). And the hostel life.... It taught me to adjust with everyone, quickly adopt the situations, how to work in a team, and much more. Hostel life is amazingly fun. </p>
             </div>
         </div>
 
@@ -65,7 +65,7 @@
                 <h4 class="second-heading">The <big>Bad</big> Times...</h4>
             </div>
             <div class="col-xs-12 col-md-9">
-                <p>College, generally said to be the most exciting phase of life. Well it is good tough.</p>
+                <p>I liked mathematics and science in school. I even managed to pass the entrence test for the JEE coaching classes at a reputed institute. But this time, the studies were overwhelming. A few days of carelessness and I was way behind the class. Academic depression ! I made a lot of mistakes there after. Bunked classes, didn't studied. It was all miserable. I learnt a lot from my mistakes. I won't ever make such mistakes again.</p>
             </div>
         </div>
 
@@ -81,7 +81,7 @@
                 <h4 class="second-heading">Wonderland...The Awesome Times...</h4>
             </div>
             <div class="col-xs-12 col-md-9">
-                <p>College, generally said to be the most exciting phase of life. Well it is good tough.</p>
+                <p>This was probably the best time of my life. It was fun. Life seemed very simple. Living with family. All thoes friends, thoes memories... School really shaped my life. It helped me explore myself and identiyf my qualities and disqualities. I was a good student at scool. Good at academics as well as extra-carricular.</p>
             </div>
         </div>
 
