--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                 <img src="Images/handsome.jpg" alt="Raunak" class="img-responsive">
             </div>
             <div class="col-xs-12 col-md-8 center">
-                <h1>Who Am I</h1>
-                <p>Honestly, I don't know.</p>
+                <h1>What Am I doing</h1>
+                <p>I was exited about computers, technology, software since childhood. Now, being in college, I am learning new technologies, coding, trying to be a very good software engineer. Struggling to stand out in the crowd. There is one more thing I am passionate about. Speaking... Public speaking. I love to be on the stage and express. I don't know what is this all leading to. I just hope for a better tomorrow</p>
             </div>
             <div class="clearfix"></div>
         </div>
@@ -63,8 +63,8 @@
 
         <div class="row">
             <div class="col-md-12 col-xs-12 top-buffer center">
-                <h1>What About Life Ahead ?</h1>
-                <p></p>
+                <h1>The Purpose of My Life</h1>
+                <p>The one thing I know for sure is I don't want to spend the so called safe-side, secure life. I want to take risks in life. I want to try whatever I desire without the fear of failure. I want to make a difference. Do passionate work. Live every single movement. I want to work at different beautiful cities of the world. I want to experience different lifestyles.And yes, I desire to be rich. I want to live the lifestyle where I don't need to look the price tag before buying anything. And I want to bring all happiness to my family.</p>
             </div>
         </div>
 
