--- a/journey-so-far.html
+++ b/journey-so-far.html
@@ -65,7 +65,7 @@
                 <h4 class="second-heading">The <big>Bad</big> Times...</h4>
             </div>
             <div class="col-xs-12 col-md-9">
-                <p>I liked mathematics and science in school. I even managed to pass the entrence test for the JEE coaching classes at a reputed institute. But this time, the studies were overwhelming. A few days of carelessness and I was way behind the class. Academic depression ! I made a lot of mistakes there after. Bunked classes, didn't studied. It was all miserable. I learnt a lot from my mistakes. I won't ever make such mistakes again.</p>
+                <p>I liked mathematics and science in school. I even managed to pass the entrance test for the JEE coaching classes at a reputed institute. But this time, the studies were overwhelming. A few days of carelessness and I was way behind the class. Academic depression ! I made a lot of mistakes there after. Bunked classes, didn't studied. It was all miserable. I learnt a lot from my mistakes. I won't ever make such mistakes again.</p>
             </div>
         </div>
 
@@ -81,7 +81,7 @@
                 <h4 class="second-heading">Wonderland...The Awesome Times...</h4>
             </div>
             <div class="col-xs-12 col-md-9">
-                <p>This was probably the best time of my life. It was fun. Life seemed very simple. Living with family. All thoes friends, thoes memories... School really shaped my life. It helped me explore myself and identiyf my qualities and disqualities. I was a good student at scool. Good at academics as well as extra-carricular.</p>
+                <p>This was probably the best time of my life. It was fun. Life seemed very simple. Living with family. All those friends, those memories... School really shaped my life. It helped me explore myself and identify my qualities and weaknesses. I was a good student at school. Good at academics as well as extra-curricular.</p>
             </div>
         </div>
 
