change framework to 'tools & frameworks' and add git to it.

--- a/skills-and-achievements.html
+++ b/skills-and-achievements.html
@@ -89,11 +89,12 @@
 
             <div class="row container-fluid">
                 <div class="col-xs-12 col-md-3">
-                    <h1>Frameworks</h1>
+                    <h1>Tools & Frameworks</h1>
                 </div>
                 <div class="col-xs-12 col-md-9">
                     <p>Twitter Bootstrap <br>
                         jQuery<br>
+                        Git & GitHub
                     </p>
                 </div>
             </div>
