move GitHub, CodeChef, HackerRank from contact-me to technical skills

--- a/skills-and-achievements.html
+++ b/skills-and-achievements.html
@@ -94,7 +94,22 @@
                 <div class="col-xs-12 col-md-9">
                     <p>Twitter Bootstrap <br>
                         jQuery<br>
-                        Git & GitHub
+                        Git & GitHub<br>
+                    </p>
+                </div>
+            </div>
+
+            <br>
+            <br>
+
+            <div class="row container-fluid">
+                <div class="col-xs-12 col-md-3">
+                    <h1>See My Code @</h1>
+                </div>
+                <div class="col-xs-12 col-md-9 mylink">
+                    <p><a href="www.github.com/raunaksingwi">GitHub</a><br>
+                        <a href="www.codechef.com/users/raunaksingwi">CodeChef</a><br>
+                        <a href="www.hackerrank.com/raunaksingwi">HackerRank</a><br>
                     </p>
                 </div>
             </div>
