--- a/skills-and-achievements.html
+++ b/skills-and-achievements.html
@@ -107,9 +107,9 @@
                     <h1>See My Code @</h1>
                 </div>
                 <div class="col-xs-12 col-md-9 mylink">
-                    <p><a href="www.github.com/raunaksingwi">GitHub</a><br>
-                        <a href="www.codechef.com/users/raunaksingwi">CodeChef</a><br>
-                        <a href="www.hackerrank.com/raunaksingwi">HackerRank</a><br>
+                    <p><a href="http://www.github.com/raunaksingwi">GitHub</a><br>
+                        <a href="http://www.codechef.com/users/raunaksingwi">CodeChef</a><br>
+                        <a href="http://www.hackerrank.com/raunaksingwi">HackerRank</a><br>
                     </p>
                 </div>
             </div>
