previous commit repeat

--- a/journey-so-far.html
+++ b/journey-so-far.html
@@ -38,7 +38,7 @@
                         <li><a href="skills-and-achievements.html">Skills and Achievements</a></li>
                         <li><a href="contact-me.html">Contact Me</a></li>
                     </ul>
-                    <p class="navbar-right footer">Made with <img src="Images/heart.png" alt="love"> by Raunak Singwi</p>
+                    <p class="navbar-right footer"><em>Made with <img src="Images/heart.png" alt="love"> by Raunak Singwi</em></p>
 
                 </div>
             </div>
