--- a/journey-so-far.html
+++ b/journey-so-far.html
@@ -35,7 +35,7 @@
                     <ul class="nav navbar-nav">
                         <li><a href="index.html">About Me</a></li>
                         <li class="active"><a href="journey-so-far.html">Journey So Far <span class="sr-only">(current)</span></a></li>
-                        <li><a href="skills-and-achievements.html">Skills and Achievements</a></li>
+                        <li><a href="skills-and-achievements.html">Skills & Achievements</a></li>
                         <li><a href="contact-me.html">Contact Me</a></li>
                     </ul>
                     <p class="navbar-right footer"><em>Made with <img src="Images/heart.png" alt="love"> by Raunak Singwi</em></p>
