--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <ul class="nav navbar-nav">
                         <li class="active"><a href="index.html">About Me <span class="sr-only">(current)</span></a></li>
                         <li><a href="journey-so-far.html">Journey So Far</a></li>
-                        <li><a href="skills-and-achievements.html">Skills and Achievements</a></li>
+                        <li><a href="skills-and-achievements.html">Skills & Achievements</a></li>
                         <li><a href="contact-me.html">Contact Me</a></li>
                     </ul>
                     <p class="navbar-right footer"><em>Made with <img src="Images/heart.png" alt="love"> by Raunak Singwi</em></p>
