--- a/skills-and-achievements.html
+++ b/skills-and-achievements.html
@@ -34,7 +34,7 @@
                     <ul class="nav navbar-nav">
                         <li><a href="index.html">About Me</a></li>
                         <li><a href="journey-so-far.html">Journey So Far</a></li>
-                        <li class="active"><a href="skills-and-achievements.html">Skills and Achievements <span class="sr-only">(current)</span></a></li>
+                        <li class="active"><a href="skills-and-achievements.html">Skills & Achievements <span class="sr-only">(current)</span></a></li>
                         <li><a href="contact-me.html">Contact Me</a></li>
                     </ul>
                     <p class="navbar-right footer"><em>Made with <img src="Images/heart.png" alt="love"> by Raunak Singwi</em></p>
