Contact me link instead of text. Font size increased to 1.5em

--- a/contact-me.html
+++ b/contact-me.html
@@ -52,7 +52,7 @@
 
         <div class="row container-fluid">
             <div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-                <dl class="dl-horizontal">
+                <dl class="dl-horizontal mylink">
                     <dt>Address</dt>
                     <dd>Boys Hostel, Ramdeobaba College of Engineering and Management, Nagpur-13</dd>
 
@@ -72,19 +72,19 @@
                     <br>
 
                     <dt>Facebook</dt>
-                    <dd>www.facebook.com/raunaksingwi7</dd>
+                    <dd><a href="http://www.facebook.com/raunaksingwi7">raunaksingwi7</a></dd>
 
                     <br>
                     <br>
 
                     <dt>Twitter</dt>
-                    <dd>@raunak_singwi</dd>
+                    <dd><a href="http://twitter.com/raunak_singwi">@raunak_singwi</a></dd>
 
                     <br>
                     <br>
 
                     <dt>LinkedIn</dt>
-                    <dd>in.linkedin.com/in/raunak-singwi-407087bb
+                    <dd><a href="http://in.linkedin.com/in/raunak-singwi-407087bb">Raunak Singwi</a>
                     </dd>
 
                 </dl>
