--- a/skills-and-achievements.html
+++ b/skills-and-achievements.html
@@ -183,16 +183,20 @@
                     <h1>Achievements</h1>
                 </div>
                 <div class="col-xs-12 col-md-9">
-                    <p>2nd Rank(Pair), National Level Debate Competition at Jamia Millia Islamia University, New Delhi. <br>
-                    1st Rank, Orator Of The Year, organised by NSS unit,Ramdeobaba College of Engineering and Management, Nagpur.<br>
-                        1st Rank(Team of 5), Youth Parliament, organised by SRC,Ramdeobaba College of Engineering and Management, Nagpur.
-                        <br>3rd Rank, Intra-College debate competition, organised by Power Grid Corporation in association with Ramdeobaba College of Engineering and Management, Nagpur.
-                        <br></p>
+                    <ul class="achievements">
+                        <li>2nd Rank(Pair), National Level Debate Competition at Jamia Millia Islamia University, New Delhi.</li>
+                        <br>
+                        <li>1st Rank, Orator Of The Year, organised by NSS unit,Ramdeobaba College of Engineering and Management, Nagpur.</li>
+                        <br>
+                        <li>1st Rank(Team of 5), Youth Parliament, organised by SRC,Ramdeobaba College of Engineering and Management, Nagpur.</li>
+                        <br>
+                        <li>3rd Rank, Intra-College debate competition, organised by Power Grid Corporation in association with Ramdeobaba College of Engineering and Management, Nagpur.</li>
+                        <br>
+                    </ul>
                 </div>
             </div>
 
         </div>
-
     </div>
 
     <script src="js/jquery.js"></script>
