Modify School and College Name

--- a/journey-so-far.html
+++ b/journey-so-far.html
@@ -46,7 +46,7 @@
 
         <div class="row container-fluid">
             <div class="col-xs-12 col-md-3">
-                <h1>Ramdeobaba College of Engineering and Management,Nagpur</h1>
+                <h1>Ramdeobaba College of Engineering, Nagpur</h1>
                 <h4 class="second-heading">Current: 3rd year Engineering</h4>
             </div>
             <div class="col-xs-12 col-md-9">
@@ -78,7 +78,7 @@
 
         <div class="row container-fluid">
             <div class="col-xs-12 col-md-3">
-                <h1>Dinbai Vidyalay,Digras</h1>
+                <h1>Dinbai High School, Digras</h1>
                 <h4 class="second-heading">Wonderland...The Awesome Times...</h4>
             </div>
             <div class="col-xs-12 col-md-9">
