--- a/index.html
+++ b/index.html
@@ -76,6 +76,6 @@
 
 
 
-    <script src="js/jquery.js"></script>
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
 </html>
