--- a/journey-so-far.html
+++ b/journey-so-far.html
@@ -95,7 +95,7 @@
     </div>
 
 
-    <script src="js/jquery.js"></script>
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
 </body>
 </html>
