--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </div>
             <div class="col-xs-12 col-md-8 center">
                 <h1>What Am I doing</h1>
-                <p>I was exited about computers, technology, software since childhood. Now, being in college, I am learning new technologies, coding, trying to be a very good software engineer. Struggling to stand out in the crowd. There is one more thing I am passionate about. Speaking... Public speaking. I love to be on the stage and express. I don't know what is this all leading to. I just hope for a better tomorrow</p>
+                <p>I was excited about computers, technology, software since childhood. Now, being in college, I am learning new technologies, coding, trying to be a very good software engineer. Struggling to stand out in the crowd. There is one more thing I am passionate about. Speaking... Public speaking. I love to be on the stage and express. I don't know what is this all leading to. I just hope for a better tomorrow</p>
             </div>
             <div class="clearfix"></div>
         </div>
