--- a/skills-and-achievements.html
+++ b/skills-and-achievements.html
@@ -190,6 +190,8 @@
                         <br>
                         <li>1st Rank(Team of 5), Youth Parliament, organised by SRC,Ramdeobaba College of Engineering and Management, Nagpur.</li>
                         <br>
+                         <li>3rd Rank(Pair), University Level Inter-Collegiate Debate Competition, organised by Dr. M.K. Umathe Arts, Science & Shri R.Mokhare Commerse College, Nagpur</li>
+                        <br>
                         <li>3rd Rank, Intra-College debate competition, organised by Power Grid Corporation in association with Ramdeobaba College of Engineering and Management, Nagpur.</li>
                         <br>
                     </ul>
