Change style of "made with love by Raunak Singwi"

--- a/contact-me.html
+++ b/contact-me.html
@@ -38,7 +38,7 @@
                         <li><a href="skills-and-achievements.html">Skills & Achievements</a></li>
                         <li class="active"><a href="contact-me.html">Contact Me <span class="sr-only">(current)</span></a></li>
                     </ul>
-                    <p class="navbar-right footer"><em>Made with <img src="Images/heart.png" alt="love"> by Raunak Singwi</em></p>
+                    <p class="navbar-right footer">Made with <img src="Images/heart.png" alt="love"> by Raunak Singwi</p>
 
                 </div>
             </div>
