--- a/skills-and-achievements.html
+++ b/skills-and-achievements.html
@@ -37,7 +37,7 @@
                         <li class="active"><a href="skills-and-achievements.html">Skills & Achievements <span class="sr-only">(current)</span></a></li>
                         <li><a href="contact-me.html">Contact Me</a></li>
                     </ul>
-                    <p class="navbar-right footer"><em>Made with <img src="Images/heart.png" alt="love"> by Raunak Singwi</em></p>
+                    <p class="navbar-right footer">Made with <img src="Images/heart.png" alt="love"> by Raunak Singwi</p>
                 </div>
             </div>
         </nav>
