Some more achievements

--- a/skills-and-achievements.html
+++ b/skills-and-achievements.html
@@ -186,9 +186,15 @@
                     <ul class="achievements">
                         <li>2nd Rank(Pair), National Level Debate Competition at Jamia Millia Islamia University, New Delhi.</li>
                         <br>
+                        <li>1st Rank(Pair), Inter-Collegiate Debate Competition, organised by Tirpude College of Management,Nagpur.</li>
+                        <br>
+                        <li>1st Rank (Best Speaker Award),Inter-Collegiate Extempore Competition, organised by Tirpude College of Management,Nagpur.</li>
+                        <br>
                         <li>1st Rank, Orator Of The Year, organised by NSS unit,Ramdeobaba College of Engineering and Management, Nagpur.</li>
                         <br>
                         <li>1st Rank(Team of 5), Youth Parliament, organised by SRC,Ramdeobaba College of Engineering and Management, Nagpur.</li>
+                        <br>
+                        <li>3rd Rank, Inter-College Debate & Extempore (combined) Competition organised by Government Institute of Forensic Sciences</li>
                         <br>
                          <li>3rd Rank(Pair), University Level Inter-Collegiate Debate Competition, organised by Dr. M.K. Umathe Arts, Science & Shri R.Mokhare Commerse College, Nagpur</li>
                         <br>
