--- a/skills-and-achievements.html
+++ b/skills-and-achievements.html
@@ -184,11 +184,13 @@
                 </div>
                 <div class="col-xs-12 col-md-9">
                     <ul class="achievements">
-                        <li>2nd Rank(Pair), National Level Debate Competition at Jamia Millia Islamia University, New Delhi. February 17th, 2016.</li>
-                        <br>
-                        <li>1st Rank(Pair), Inter-Collegiate Debate Competition, organised by Tirpude College of Management,Nagpur. February 3rd, 2017.</li>
+                       <li>1st Rank(Pair), Inter-Collegiate Debate Competition, organised by Tirpude College of Management,Nagpur. February 3rd, 2017.</li>
                         <br>
                         <li>1st Rank (Best Speaker Award),Inter-Collegiate Extempore Competition, organised by Tirpude College of Management,Nagpur. February 3rd, 2017.</li>
+                        <br>
+                        <li>2nd Rank(Pair), National Level Debate Competition at Jamia Millia Islamia University, New Delhi. February 17th, 2016.</li>
+                        <br>
+                        <li>3rd Rank, Vidharbha Level Elocution Competition organised at 'C.P. and Berar college' in association with Late.Savarkar Memorial Committee, Nagpur. March, 2017</li>
                         <br>
                         <li>1st Rank, Orator Of The Year, organised by NSS unit,Ramdeobaba College of Engineering and Management, Nagpur. 2015</li>
                         <br>
