--- a/skills-and-achievements.html
+++ b/skills-and-achievements.html
@@ -119,7 +119,7 @@
                     <h1>Achievements</h1>
                 </div>
                 <div class="col-xs-12 col-md-9">
-                    <p>Technical Skills coming soon, for inter-personal achievements scroll down ↓<br>
+                    <p>Technical achievements coming soon, for other achievements, scroll down ↓<br>
                     </p>
                 </div>
             </div>
