--- a/skills-and-achievements.html
+++ b/skills-and-achievements.html
@@ -119,8 +119,9 @@
                     <h1>Achievements</h1>
                 </div>
                 <div class="col-xs-12 col-md-9">
-                    <p>Technical Skills coming soon, for inter-personal achievements scroll down ↓<br>
-                    </p>
+                    <ul class="achievements">
+                       <li>Conducted workshop on python in my department under Programming Club initiative.</li>
+                        <br>
                 </div>
             </div>
         </div>
