--- a/skills-and-achievements.html
+++ b/skills-and-achievements.html
@@ -159,7 +159,7 @@
                     <h1>Team Player</h1>
                 </div>
                 <div class="col-xs-12 col-md-9">
-                    <p>I enjoy working with people as a team. I realised this by playing various sports and also organising some co-curricular events.</p>
+                    <p>I enjoy working with people as a team. I realized this by playing various sports and also organizing some co-curricular events.</p>
                 </div>
             </div>
 
@@ -184,23 +184,23 @@
                 </div>
                 <div class="col-xs-12 col-md-9">
                     <ul class="achievements">
-                       <li>1st Rank(Pair), Inter-Collegiate Debate Competition, organised by Tirpude College of Management,Nagpur. February 3rd, 2017.</li>
+                       <li>1st Rank(Pair), Inter-Collegiate Debate Competition, organized by Tirpude College of Management,Nagpur. February 3rd, 2017.</li>
                         <br>
-                        <li>1st Rank (Best Speaker Award),Inter-Collegiate Extempore Competition, organised by Tirpude College of Management,Nagpur. February 3rd, 2017.</li>
+                        <li>1st Rank (Best Speaker Award),Inter-Collegiate Extempore Competition, organized by Tirpude College of Management,Nagpur. February 3rd, 2017.</li>
                         <br>
                         <li>2nd Rank(Pair), National Level Debate Competition at Jamia Millia Islamia University, New Delhi. February 17th, 2016.</li>
                         <br>
-                        <li>3rd Rank, Vidharbha Level Elocution Competition organised at 'C.P. and Berar college' in association with Late.Savarkar Memorial Committee, Nagpur. March, 2017</li>
+                        <li>3rd Rank, Vidharbha Level Elocution Competition organized at 'C.P. and Berar college' in association with Late.Savarkar Memorial Committee, Nagpur. March, 2017</li>
                         <br>
-                        <li>1st Rank, Orator Of The Year, organised by NSS unit,Ramdeobaba College of Engineering and Management, Nagpur. 2015</li>
+                        <li>1st Rank, Orator Of The Year, organized by NSS unit,Ramdeobaba College of Engineering and Management, Nagpur. 2015</li>
                         <br>
-                        <li>1st Rank(Team of 5), Youth Parliament, organised by SRC,Ramdeobaba College of Engineering and Management, Nagpur. 2016</li>
+                        <li>1st Rank(Team of 5), Youth Parliament, organized by SRC,Ramdeobaba College of Engineering and Management, Nagpur. 2016</li>
                         <br>
-                        <li>3rd Rank, Inter-College Debate & Extempore (combined) Competition organised by Government Institute of Forensic Sciences,Nagpur. January 31st, 2017</li>
+                        <li>3rd Rank, Inter-College Debate & Extempore (combined) Competition organized by Government Institute of Forensic Sciences,Nagpur. January 31st, 2017</li>
                         <br>
-                         <li>3rd Rank(Pair), University Level Inter-Collegiate Debate Competition, organised by Dr. M.K. Umathe Arts, Science & Shri R.Mokhare Commerse College, Nagpur. January 17th, 2017</li>
+                         <li>3rd Rank(Pair), University Level Inter-Collegiate Debate Competition, organized by Dr. M.K. Umathe Arts, Science & Shri R.Mokhare Commerse College, Nagpur. January 17th, 2017</li>
                         <br>
-                        <li>3rd Rank, Intra-College debate competition, organised by Power Grid Corporation in association with Ramdeobaba College of Engineering and Management, Nagpur. October 25th, 2016</li>
+                        <li>3rd Rank, Intra-College debate competition, organized by Power Grid Corporation in association with Ramdeobaba College of Engineering and Management, Nagpur. October 25th, 2016</li>
                         <br>
                     </ul>
                 </div>
