--- a/skills-and-achievements.html
+++ b/skills-and-achievements.html
@@ -10,9 +10,7 @@
 
     <link rel="stylesheet" type="text/css" href="css/mystyle.css">
 
-    <link href="https://fonts.googleapis.com/css?family=Special+Elite" rel="stylesheet">
-
-    <link href="https://fonts.googleapis.com/css?family=Dekko" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Acme|The+Girl+Next+Door" rel="stylesheet">
 </head>
 <body>
     <div class="container-fluid">
