--- a/journey-so-far.html
+++ b/journey-so-far.html
@@ -64,7 +64,7 @@
                 <h4 class="second-heading">The <big>Bad</big> Times...</h4>
             </div>
             <div class="col-xs-12 col-md-9">
-                <p>I liked mathematics and science in school. I even managed to pass the entrance test for the JEE coaching classes at a reputed institute. But this time, the studies were overwhelming. A few days of carelessness and I was way behind the class. Academic depression ! I made a lot of mistakes there after. Bunked classes, didn't studied. It was all miserable. I have learned a lot from my mistakes. I won't ever make such mistakes ever again.</p>
+                <p>I liked mathematics and science in school. I even managed to pass the entrance test for the JEE coaching classes at a reputed institute. But this time, the studies were overwhelming. A few days of carelessness and I was way behind the class. Academic depression ! I made a lot of mistakes there after. Bunked classes, didn't studied. It was all miserable. I have learned a lot from my mistakes. I won't make such mistakes ever again.</p>
             </div>
         </div>
 
