--- a/skills-and-achievements.html
+++ b/skills-and-achievements.html
@@ -60,6 +60,7 @@
                     <p>Python <br>
                        Java <br>
                        C <br>
+                       R (basic) <br>
                     </p>
                 </div>
             </div>
@@ -75,6 +76,8 @@
                 <div class="col-xs-12 col-md-9">
                     <p>HTML <br>
                         CSS <br>
+                        JavaScript (basic) <br>
+                        jQuery (basic) <br>
                     </p>
                 </div>
             </div>
@@ -85,11 +88,26 @@
 
             <div class="row container-fluid">
                 <div class="col-xs-12 col-md-3">
-                    <h1>Tools & Frameworks</h1>
+                    <h1>Frameworks / Libraries</h1>
                 </div>
                 <div class="col-xs-12 col-md-9">
                     <p>Twitter Bootstrap <br>
-                        Git & GitHub<br>
+                    	Selenium WebDriver (basic) <br>
+                    	Started Learning Scikit-Learn <br>
+                    </p>
+                </div>
+            </div>
+
+            <br>
+            <br>
+
+            <div class="row container-fluid">
+                <div class="col-xs-12 col-md-3">
+                    <h1>Tools</h1>
+                </div>
+                <div class="col-xs-12 col-md-9">
+                    <p> Version Control (Git / GitHub)<br>
+                    	Jupyter Notebook <br>
                     </p>
                 </div>
             </div>
@@ -125,6 +143,36 @@
             </div>
         </div>
 
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+
+        <div class="row container-fluid">
+
+            <div class="col-xs-12 col-md-12">
+                <h1 class="text-center">Projects</h1>
+
+                <br>
+                <br>
+                <br>
+                <br>
+
+            </div>
+
+            <div class="row container-fluid">
+                <div class="col-xs-12 col-md-3">
+                    <h1>Railway Ticket Automation</h1>
+                </div>
+                <div class="col-xs-12 col-md-9">
+                    <p>Automated the process of booking railway tickets from IRCTC website. The customer details have to be filled in the program beforehand once and thoes will be automatically filled in the website at the time of ticket booking. Specially useful for tatkal tickets where the time to book a ticket is really low and this automation can save time that is very precious.
+                    </p>
+                </div>
+            </div>
+
+            <br>
+            <br>
         <br>
         <br>
         <br>
