--- a/contact-me.html
+++ b/contact-me.html
@@ -58,7 +58,7 @@
                     <br>
 
                     <dt>Email</dt>
-                    <dd>raunaksingwi7@gmail.com</dd>
+                    <dd>mail@raunaksingwi.me</dd>
 
                     <br>
                     <br>
