--- a/skills-and-achievements.html
+++ b/skills-and-achievements.html
@@ -10,7 +10,7 @@
 
     <link rel="stylesheet" type="text/css" href="css/mystyle.css">
 
-    <link href="https://fonts.googleapis.com/css?family=Cuprum" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
 
     <link href="https://fonts.googleapis.com/css?family=Montserrat+Subrayada" rel="stylesheet">
 </head>
