--- a/contact-me.html
+++ b/contact-me.html
@@ -72,19 +72,19 @@
                     <br>
 
                     <dt>Facebook</dt>
-                    <dd><a href="http://www.facebook.com/raunaksingwi7">raunaksingwi7</a></dd>
+                    <dd><a href="http://www.facebook.com/raunaksingwi7" target="_blank">raunaksingwi7</a></dd>
 
                     <br>
                     <br>
 
                     <dt>Twitter</dt>
-                    <dd><a href="http://twitter.com/raunak_singwi">@raunak_singwi</a></dd>
+                    <dd><a href="http://twitter.com/raunak_singwi" target="_blank">@raunak_singwi</a></dd>
 
                     <br>
                     <br>
 
                     <dt>LinkedIn</dt>
-                    <dd><a href="http://in.linkedin.com/in/raunak-singwi-407087bb">Raunak Singwi</a>
+                    <dd><a href="http://in.linkedin.com/in/raunak-singwi-407087bb" target="_blank">Raunak Singwi</a>
                     </dd>
 
                 </dl>
