--- a/skills-and-achievements.html
+++ b/skills-and-achievements.html
@@ -164,7 +164,8 @@
 
             <div class="row container-fluid">
                 <div class="col-xs-12 col-md-3">
-                    <h1>Railway Ticket Automation (Under Construction)</h1>
+                    <h1>Railway Ticket Automation</h1>
+                    <h4 class="second-heading">(Under Construction)</h4>
                 </div>
                 <div class="col-xs-12 col-md-9">
                     <p>Automated the process of booking railway tickets from IRCTC website. The customer details have to be filled in the program beforehand once and thoes will be automatically filled in the website at the time of ticket booking. Specially useful for tatkal tickets where the time to book a ticket is really low and this automation can save time that is very precious.
