--- a/skills-and-achievements.html
+++ b/skills-and-achievements.html
@@ -62,7 +62,6 @@
                     <p>Python <br>
                        Java <br>
                        C <br>
-                       R (basic) <br>
                     </p>
                 </div>
             </div>
@@ -78,8 +77,7 @@
                 <div class="col-xs-12 col-md-9">
                     <p>HTML <br>
                         CSS <br>
-                        JavaScript (basic) <br>
-                        jQuery (basic) <br>
+                        jQuery (Started Learning) <br>
                     </p>
                 </div>
             </div>
@@ -94,7 +92,7 @@
                 </div>
                 <div class="col-xs-12 col-md-9">
                     <p>Twitter Bootstrap <br>
-                    	Selenium WebDriver (basic) <br>
+                    	Selenium WebDriver (Started Learning) <br>
                     </p>
                 </div>
             </div>
@@ -168,7 +166,7 @@
                     <h4 class="second-heading">(Under Construction)</h4>
                 </div>
                 <div class="col-xs-12 col-md-9">
-                    <p>Automated the process of booking railway tickets from IRCTC website. The customer details have to be filled in the program beforehand once and thoes will be automatically filled in the website at the time of ticket booking. Specially useful for tatkal tickets where the time to book a ticket is really low and this automation can save time that is very precious.
+                    <p>I am writing a script that will automate the process of booking railway tickets from IRCTC website. The program will first ask for the passenger details and then wait for user input to start the process (as you need to wait till 11 am to book tatkal tickets).Specially useful for tatkal tickets where the time to book a ticket is really low and this automation can give you an edge and increase the chances of getting the taktal ticket.
                     </p>
                 </div>
             </div>
