--- a/index.html
+++ b/index.html
@@ -1,81 +1,335 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+	<meta charset="UTF-8">
+	<meta name="auther" content="Raunak Singwi">
+	<meta name="description" content="Raunak Singwi's portfolio.">
+	<meta name="viewport" content="width=device-width, initial-scale = 1.0, maximum-scale=1, user-scalable=no"">
+	<title>Raunak Singwi</title>
 
-    <title>Raunak Singwi | About Me</title>
+	<!--bootstrap-->
+	<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css" type="text/css">
 
-    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
+	<!--fonts-->
+	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+	<style>
+		
+		body{
+			font-family: roboto,san-serif;
+		}
 
-    <link rel="stylesheet" type="text/css" href="css/mystyle.css">
+		p{
+			font-size: 2em;
+		}
 
-    <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
+		.title{
+			font-family: 'Lato', sans-serif;
+			background-color: #f29933;
+			color: white;
+		}
 
-    <link href="https://fonts.googleapis.com/css?family=Montserrat+Subrayada" rel="stylesheet">
+		.skills{
+			font-size: 2em;
+		}
+
+		.bio{
+			font-size: 1.25em
+		}
+
+		li{
+			font-size: 2em;
+		}
+	</style>
 
 </head>
 
 <body>
 
-    <div class="container-fluid">
+<div class="container">
 
-        <nav class="navbar navbar-default" role="navigation">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#my-menu" aria-expanded="false">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="index.html">Raunak Singwi</a>
-                </div>
+	<div class="row">
+		<div class="col-xs-6 col-md-3 title">
+			<h2><span class="glyphicon glyphicon-user"></span> PROFILE</h2>
+		</div>
+	</div>
+	
+	<br>
+	<br>
 
-                <div class="collapse navbar-collapse mynavbar" id="my-menu">
-                    <ul class="nav navbar-nav">
-                        <li class="active"><a href="index.html">About Me <span class="sr-only">(current)</span></a></li>
-                        <li><a href="journey-so-far.html">Journey So Far</a></li>
-                        <li><a href="skills-and-achievements.html">Skills & Achievements</a></li>
-                        <li><a href="contact-me.html">Contact Me</a></li>
-                    </ul>
-                    <p class="navbar-right footer">Made with <img src="Images/heart.png" alt="love"> by Raunak Singwi</p>
-                </div>
-            </div>
-        </nav>
-        
-        <div class="row container-fluid">
-            <div class="col-xs-12 col-md-3">
-                <img src="Images/handsome.jpg" alt="Raunak" class="img-responsive">
-            </div>
-            <div class="col-xs-12 col-md-8 center">
-                <h1>What Am I doing</h1>
-                <p>I was excited about computers, technology, software since childhood. Now, being in college, I am learning new technologies, coding, trying to be a very good software engineer. Struggling to stand out in the crowd. There is one more thing I am passionate about. Speaking... Public speaking. I love to be on the stage and express. I don't know what is this all leading to. I just hope for a better tomorrow</p>
-            </div>
-            <div class="clearfix"></div>
-        </div>
+	<div class="row">
+		<div class="col-xs-12 col-md-3">
+			<img src="handsome.jpg" alt="Raunak" class="img-responsive">
+		</div>
+		<div class="col-xs-12 col-md-3">
+			<h1>Raunak Singwi</h1>
+			<h4 style="color: green">R&D Intern, VMware.</h4>
+		</div>
+		<div class="col-xs-12 col-md-6 table-responsive">
+			<table class="table bio">
+				<tr>
+					<th><span class="glyphicon glyphicon-user"></span> Name: </th>
+					<td>Rauank Ravindra Singwi</td>
+				</tr>
+				<tr>
+					<th><span class="glyphicon glyphicon-tint"></span> Date of Birth : </th>
+					<td>December 25th, 1996</td>
+				</tr>
+				<tr>
+					<th><span class="glyphicon glyphicon-earphone"></span> Phone : </th>
+					<td>+91 94214 93219</td>
+				</tr>
+				<tr>
+					<th><span class="glyphicon glyphicon-envelope"></span> Email (Work) : </th>
+					<td>mail@raunaksingwi.me</td>
+				</tr>
+				<tr>
+					<th><span class="glyphicon glyphicon-envelope"></span> Email (Personal) : </th>
+					<td>raunaksingwi7@gmail.com</td>
+				</tr>
+				<tr>
+					<th><span class="glyphicon glyphicon-globe"></span> GitHub Profile : </th>
+					<td><a href="http://www.github.com/raunaksingwi">Click Here</a></td>
+				</tr>
+				<tr>
+					<th><span class="glyphicon glyphicon-globe"></span> CodeChef Profile : </th>
+					<td><a href="http://www.codechef.com/users/raunaksingwi">Click Here</a></td>
+				</tr>
+				<tr>
+					<th><span class="glyphicon glyphicon-globe"></span> HackerRank Profile : </th>
+					<td><a href="http://www.hackerrank.com/raunaksingwi">Click Here</a></td>
+				</tr>
+				<tr>
+					<th><span class="glyphicon glyphicon-globe"></span> LinkedIn Profile : </th>
+					<td><a href="https://www.linkedin.com/in/raunak-singwi-407087bb/">Click Here</a></td>
+				</tr>
+				<tr>
+					<th><span class="glyphicon glyphicon-facetime-video"></span> YouTube Channel : </th>
+					<td><a href="https://www.youtube.com/channel/UCS3X-xdL0iS0hdHHShrMifw?view_as=subscriber">Click Here</a></td>
+				</tr>
 
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
+			</table>
+		</div>
+	</div>
 
-        <div class="row">
-            <div class="col-md-12 col-xs-12 top-buffer center">
-                <h1>The Purpose of My Life</h1>
-                <p>The one thing I know for sure is I don't want to spend the so called safe-side, secure life. I want to take risks in life. I want to try whatever I desire without the fear of failure. I want to make a difference. Do passionate work. Live every single movement. I want to work at different beautiful cities of the world. I want to experience different lifestyles.And yes, I desire to be rich. I want to live the lifestyle where I don't need to look the price tag before buying anything. And I want to bring all happiness to my family.</p>
-            </div>
-        </div>
+	<br><br>
 
-    </div>
+	<div class="row">
+		<div class="col-xs-12">
+			<p>'Moodie and Foodie' defines me the best. Apart from eating, I love to code. Just the feeling to write something on my computer and the see something happen is amazingly pleasing. But if coding is my bread and butter, listning and reciting poetry is my desert. Apart from that, I love skateboarding and swimming. </p>
+		</div>
+	</div>
 
-
-
+	<br>
+	<br>
+	<br>
 
 
+	<div class="row">
+		<div class="col-xs-6 col-md-4 title">
+			<h2><span class="glyphicon glyphicon-road"></span> JOURNEY SO FAR</h2>
+		</div>
+	</div>
 
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+	<br><br>
+
+	<div class="row table-responsive">
+		<table class="table">
+			<tr>
+				<th>
+					<h1>Ramdeobaba College of Engineering, Nagpur</h1>
+                	<h4>Current: Final Year</h4>
+				</th>
+				<td>
+					<p>Well, college is not what I assumed it to be. And definitely not what others told me about it ! All those, physics chemistry and mathematics classes in 1st year... I hated them ! I thought 2nd year will be where we dive into technology and start making software. How immature I was... I didn't want to learn most of the subjects ! I always wanted to be a software developer, a coder,a designer.... But yes, here I met genius people who guided me to become what I want to be. And yes, college have taught me a lot. It taught me, how to learn on your own. How to study the whole night to pass the exams next morning. How to do work with patience and dedication you don't like to do(writing journals and assignments). And the hostel life.... It taught me to adjust with everyone, quickly adopt the situations, how to work in a team, and much more. Hostel life is amazingly fun. </p>
+				</td>
+			</tr>
+			<tr>
+				<th>
+					<h1>Padhye Sir's Akash Education, Akola</h1>
+                	<h4>The <big>Bad</big> Times...</h4>
+				</th>
+				<td>
+					<p>I liked mathematics and science in school. I even managed to pass the entrance test for the JEE coaching classes at a reputed institute. But this time, the studies were overwhelming. A few days of carelessness and I was way behind the class. Academic depression ! I made a lot of mistakes there after. Bunked classes, didn't study. It was all miserable. I have learned a lot from my mistakes. I won't make such mistakes ever again.</p>
+				</td>
+			</tr>
+			<tr>
+				<th>
+					<h1>Dinbai High School, Digras</h1>
+                	<h4>Wonderland...The Awesome Times...</h4>
+				</th>
+				<td>
+					<p>This was probably the best time of my life. It was fun. Life seemed very simple. Living with family. All those friends, those memories... School really shaped my life. It helped me explore myself and identify my qualities and weaknesses. I was a good student at school. Good at academics as well as extra-curricular.</p>
+				</td>
+			</tr>
+		</table>
+
+	</div>
+	
+	<br>
+	<br>
+
+
+	<div class="row">
+		<div class="col-xs-6 col-md-5 title">
+			<h2><span class="glyphicon glyphicon-star"></span> SKILLS & ACHIEVEMENTS</h2>
+		</div>
+	</div>
+
+	<br><br>
+
+	<div class="row">
+		<div class="col-xs-12">
+			<h2>Technical Skills</h2>
+			<br><br>
+		</div>
+	</div>
+
+	<div class="row table-responsive">
+		<table class="table skills">
+			<tr>
+				<th>
+					Programming Languages : 
+				</th>
+				<td>
+					Python, Java, C, SQL.
+				</td>
+			</tr>
+			
+			<tr>
+				<th>
+					Databases : 
+				</th>
+				<td>
+					SQLite, Oracle Database.
+				</td>
+			</tr>
+			
+			<tr>
+				<th>
+					Web Development : 
+				</th>
+				<td>
+					HTML, CSS, jQuery (Basic knowledge), BootStrap.
+				</td>
+			</tr>
+			
+			<tr>
+				<th>
+					Tools / Frameworks
+				</th>
+				<td>
+					Selenium WebDriver (Basic), Git/GitHub.
+				</td>
+			</tr>
+			
+		</table>
+
+		<div class="row">
+			<div class="col-xs-12">
+				<h2>Projects</h2>
+				<br><br>
+			</div>
+		</div>
+
+		<div class="row table-responsive">
+			<div class="col-xs-12">
+				<table class="table skills">
+				<tr>
+					<th>College Inquiry ChatBot</th>
+					<td>This is the project I am doing under persistent. This is a chatbot web-app which will answer engineering college related queries such as queries about admissions or placements.</td>
+				</tr>
+
+				<tr>
+					<th>Railway Ticket Booking Automation</th>
+					<td>I am writing a script that will automate the process of booking railway tickets from IRCTC website. The program will first ask for the passenger details and then wait for user input to start the process (as you need to wait till 11 am to book tatkal tickets).Specially useful for tatkal tickets where the time to book a ticket is really low and this automation can give you an edge and increase the chances of getting the taktal ticket.</td>
+				</tr>
+				</table>
+			</div>
+		</div>
+
+		<br><br>
+
+		<div class="row">
+			<div class="col-xs-12">
+				<h2>Interpersonal Skills</h2>
+				<br><br>
+			</div>
+		</div>
+
+		<div class="row table-responsive">
+			<div class="col-xs-12">
+				<table class="table skills">
+					<tr>
+						<th>Public Speaking and Debating</th>
+						<td>I am very confident in delivering speech in front of mass audience. I have won various awards in speech and debate competitions.</td>
+					</tr>
+					<tr>
+						<th>Team Player</th>
+						<td>I enjoy working with people as a team. I realized this by playing various sports and also organizing some co-curricular events.</td>
+					</tr>
+					<tr>
+						<th>Leadership</th>
+						<td>I believe that I have leadership qualities. I have found myself many time leading the team in the right direction with a solution centric approach.</td>
+					</tr>
+				</table>
+			</div>		
+		</div>
+
+		<br><br>
+
+		<div class="row">
+			<div class="col-xs-12">
+				<h2>Public Speaking / Debating Achievements</h2>
+				<br><br>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="col-xs-12">
+				<ul class="list-unstyled">
+						<li><span class="glyphicon glyphicon-star"></span> 1st Rank(Pair), Inter-Collegiate Debate Competition, organized by Tirpude College of Management,Nagpur. February 3rd, 2017.</li>
+                        <br>
+                        <li><span class="glyphicon glyphicon-star"></span> 1st Rank (Best Speaker Award),Inter-Collegiate Extempore Competition, organized by Tirpude College of Management,Nagpur. February 3rd, 2017.</li>
+                        <br>
+                        <li><span class="glyphicon glyphicon-star"></span> 2nd Rank(Pair), National Level Debate Competition at Jamia Millia Islamia University, New Delhi. February 17th, 2016.</li>
+                        <br>
+                        <li><span class="glyphicon glyphicon-star"></span> 3rd Rank, Vidharbha Level Elocution Competition organized at 'C.P. and Berar college' in association with Late. Savarkar Memorial Committee, Nagpur. March, 2017</li>
+                        <br>
+                        <li><span class="glyphicon glyphicon-star"></span> 1st Rank, Orator Of The Year, organized by NSS unit,Ramdeobaba College of Engineering and Management, Nagpur. 2015</li>
+                        <br>
+                        <li><span class="glyphicon glyphicon-star"></span> 1st Rank(Team of 5), Youth Parliament, organized by SRC,Ramdeobaba College of Engineering and Management, Nagpur. 2016</li>
+                        <br>
+                        <li><span class="glyphicon glyphicon-star"></span> 3rd Rank, Inter-College Debate & Extempore (combined) Competition organized by Government Institute of Forensic Sciences,Nagpur. January 31st, 2017</li>
+                        <br>
+                         <li><span class="glyphicon glyphicon-star"></span> 3rd Rank(Pair), University Level Inter-Collegiate Debate Competition, organized by Dr. M.K. Umathe Arts, Science & Shri R.Mokhare Commerse College, Nagpur. January 17th, 2017</li>
+                        <br>
+                        <li><span class="glyphicon glyphicon-star"></span> 3rd Rank, Intra-College debate competition, organized by Power Grid Corporation in association with Ramdeobaba College of Engineering and Management, Nagpur. October 25th, 2016</li>
+                        <br>
+				</ul>
+			</div>
+		</div>
+	</div>
+	
+	<br>
+	<br>
+
+	<div class="row">
+		<div class="col-xs-12 text-center">
+			<p class="text-muted" style="font-size: 1.25em">Made with <img src="heart.png" alt="love" style="height: 1em"> by Raunak Singwi</p>
+		</div>
+	</div>
+
+	<!-- jQuery library -->
+	<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>-->
+
+	<script>
+		$("document").ready(function(){
+
+
+		})
+	</script>
+</div>
+
+</body>
 </html>
