--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 			<table class="table bio">
 				<tr>
 					<th><span class="glyphicon glyphicon-user"></span> Name: </th>
-					<td>Rauank Ravindra Singwi</td>
+					<td>Raunak Ravindra Singwi</td>
 				</tr>
 				<tr>
 					<th><span class="glyphicon glyphicon-tint"></span> Date of Birth : </th>
@@ -121,7 +121,7 @@
 
 	<div class="row">
 		<div class="col-xs-12">
-			<p>'Moodie and Foodie' defines me the best. Apart from eating, I love to code. Just the feeling to write something on my computer and then see something amazing happen is incredibly pleasing. But if coding is my bread and butter, listening and reciting poetry is my desert. Apart from that, I love skateboarding and swimming. </p>
+			<p>'Moodie and Foodie' defines me the best. Apart from eating, I love to code. Just the feeling to write something on my computer and then see something amazing happen is incredibly pleasing. But if coding is my bread and butter, listening and reciting poetry is my dessert. Apart from that, I love skateboarding and swimming. </p>
 		</div>
 	</div>
 
