--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<meta name="description" content="Raunak Singwi's portfolio.">
 	<meta name="viewport" content="width=device-width, initial-scale = 1.0, maximum-scale=1, user-scalable=no"">
 	<title>Raunak Singwi</title>
+	<link rel='shortcut icon' type='image/x-icon' href='favicon.ico'>
+
 	<!--bootstrap-->
 	<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css" type="text/css">
 
