Table size reduce

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		}
 
 		.bio{
-			font-size: 1.25em
+			font-size: 1em
 		}
 
 		li{
@@ -72,8 +72,8 @@
 			<h1>Raunak Singwi</h1>
 			<h4 style="color: green">R&D Intern, VMware.</h4>
 		</div>
-		<div class="col-xs-12 col-md-6 table-responsive">
-			<table class="table bio">
+		<div class="col-xs-12 col-md-6">
+			<table class="bio">
 				<tr>
 					<th><span class="glyphicon glyphicon-user"></span> Name: </th>
 					<td>Raunak Ravindra Singwi</td>
