--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
 		li{
 			font-size: 2em;
 		}
+
+		.logo img{
+			height: 2.5em;
+			margin: 1em;
+		}
 	</style>
 
 </head>
@@ -56,7 +61,7 @@
 <div class="container">
 
 	<div class="row">
-		<div class="col-xs-12 col-md-3 title">
+		<div class="col-xs-12 col-md-4 col-lg-3 title">
 			<h2><span class="glyphicon glyphicon-user"></span> PROFILE</h2>
 		</div>
 	</div>
@@ -66,58 +71,48 @@
 
 	<div class="row">
 		<div class="col-xs-12 col-md-3">
-			<img src="casual.jpg" alt="Raunak" class="img-responsive">
+			<img src="pics/formal.jpg" alt="Raunak" class="img-responsive">
 			<br><br>
 		</div>
-		<div class="col-xs-12 col-md-3">
+		<div class="col-xs-12 col-md-5">
 			<h1>Raunak Singwi</h1>
-			<h4 style="color: green">R&D Intern, VMware.</h4>
+			<h4 style="color: #4ca5d0">R&D Intern, VMware.</h4>
 			<br><br>
 		</div>
-		<div class="col-xs-12 col-md-6">
+		<div class="col-xs-12 col-md-4">
 			<table class="bio">
 				<tr>
-					<th><span class="glyphicon glyphicon-user"></span> Name: </th>
+					<th>Name:</th>
 					<td>Raunak Ravindra Singwi</td>
 				</tr>
 				<tr>
-					<th><span class="glyphicon glyphicon-tint"></span> Date of Birth : </th>
+					<th>Date of Birth:</th>
 					<td>December 25th, 1996</td>
 				</tr>
 				<tr>
-					<th><span class="glyphicon glyphicon-earphone"></span> Phone : </th>
+					<th>Phone:</th>
 					<td>+91 94214 93219</td>
 				</tr>
 				<tr>
-					<th><span class="glyphicon glyphicon-envelope"></span> Email (Work) : </th>
+					<th>Email (Work):</th>
 					<td>mail@raunaksingwi.me</td>
 				</tr>
 				<tr>
-					<th><span class="glyphicon glyphicon-envelope"></span> Email (Personal) : </th>
+					<th>Email (Personal):</th>
 					<td>raunaksingwi7@gmail.com</td>
 				</tr>
-				<tr>
-					<th><span class="glyphicon glyphicon-globe"></span> GitHub Profile : </th>
-					<td><a href="http://www.github.com/raunaksingwi">Click Here</a></td>
-				</tr>
-				<tr>
-					<th><span class="glyphicon glyphicon-globe"></span> CodeChef Profile : </th>
-					<td><a href="http://www.codechef.com/users/raunaksingwi">Click Here</a></td>
-				</tr>
-				<tr>
-					<th><span class="glyphicon glyphicon-globe"></span> HackerRank Profile : </th>
-					<td><a href="http://www.hackerrank.com/raunaksingwi">Click Here</a></td>
-				</tr>
-				<tr>
-					<th><span class="glyphicon glyphicon-globe"></span> LinkedIn Profile : </th>
-					<td><a href="https://www.linkedin.com/in/raunak-singwi-407087bb/">Click Here</a></td>
-				</tr>
-				<tr>
-					<th><span class="glyphicon glyphicon-facetime-video"></span> YouTube Channel : </th>
-					<td><a href="https://www.youtube.com/channel/UCS3X-xdL0iS0hdHHShrMifw?view_as=subscriber">Click Here</a></td>
-				</tr>
-
 			</table>
+			<div class="row">
+				<div class="col-xs-12 logo">
+					<a href="http://www.github.com/raunaksingwi"><img src="pics/github.png" alt="GitHub Logo"></a>
+
+					<a href="http://www.hackerrank.com/raunaksingwi"><img src="pics/hackerrank.png" alt="HackerRank Logo"></a>
+
+					<a href="https://www.linkedin.com/in/raunak-singwi-407087bb/"><img src="pics/linkedin.png" alt="Linkedin Logo"></a>
+
+					<a href="https://www.youtube.com/channel/UCS3X-xdL0iS0hdHHShrMifw?view_as=subscriber"><img src="pics/youtube.png" alt="YouTube Logo"></a>
+				</div>
+			</div>
 		</div>
 	</div>
 	<br><br>
@@ -135,7 +130,7 @@
 
 
 	<div class="row">
-		<div class="col-xs-12 col-md-4 title">
+		<div class="col-xs-12 col-md-5 col-lg-4 title">
 			<h2><span class="glyphicon glyphicon-road"></span> JOURNEY SO FAR</h2>
 		</div>
 	</div>
@@ -175,7 +170,7 @@
 
 
 	<div class="row">
-		<div class="col-xs-12 col-md-5 title">
+		<div class="col-xs-12 col-md-6 col-lg-5 title">
 			<h2><span class="glyphicon glyphicon-star"></span> SKILLS & ACHIEVEMENTS</h2>
 		</div>
 	</div>
@@ -193,7 +188,7 @@
 
 	<div class="row">
 		<div class="col-xs-12 col-md-3">
-			<p style="font-weight: bold;">PROGRAMMING LANGUAGES : </p>
+			<p style="font-weight: bold;">PROGRAMMING LANGUAGES</p>
 		</div>
 		<div class="col-xs-12 col-md-9">
 			<p>Python, Java, C, SQL.</p>
@@ -202,7 +197,7 @@
 	<br>
 	<div class="row">
 		<div class="col-xs-12 col-md-3">
-			<p style="font-weight: bold;">DATABASE :</p> 
+			<p style="font-weight: bold;">DATABASE</p> 
 		</div>
 		<div class="col-xs-12 col-md-9">
 			<p>SQLite, Oracle Database.</p>
@@ -211,7 +206,7 @@
 	<br>
 	<div class="row">
 		<div class="col-xs-12 col-md-3">
-			<p style="font-weight: bold;">WEB DEVELOPMENT : </p>
+			<p style="font-weight: bold;">WEB DEVELOPMENT</p>
 		</div>
 		<div class="col-xs-12 col-md-9">
 						<p>HTML, CSS, jQuery (Basic knowledge), BootStrap.</p>
@@ -330,7 +325,7 @@
 
 	<div class="row">
 		<div class="col-xs-12 text-center">
-			<p class="text-muted" style="font-size: 1.25em">Made with <img src="heart.png" alt="love" style="height: 1em"> by Raunak Singwi</p>
+			<p class="text-muted" style="font-size: 1.25em">Made with <img src="pics/heart.png" alt="love" style="height: 1em"> by Raunak Singwi</p>
 		</div>
 	</div>
 
